Enhance README with project details and instructions
Added detailed project description, goals, technologies, structure, and usage instructions to README.